--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 activitypub_federation = "0.4.0"
 anyhow = "1.0.71"
 diesel = "2.1.0"
+dotenvy = "0.15.7"
 serde = { version = "1.0.163", features = ["derive"] }
 url = "2.3.1"
