--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 activitypub_federation = "0.4.0"
 anyhow = "1.0.71"
-diesel = "2.1.0"
+async-trait = "0.1.68"
+axum = "0.6.18"
+chrono = "0.4.26"
+diesel = { version = "2.1.0", features = ["postgres"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0.163", features = ["derive"] }
+tokio = { version = "1.28.2", features = ["full"] }
 url = "2.3.1"
