--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-activitypub_federation = "0.4.0"
+activitypub_federation = { version = "0.4.0", features = ["axum"] }
+actix-rt = "2.8.0"
 anyhow = "1.0.71"
 async-trait = "0.1.68"
 axum = "0.6.18"
@@ -16,3 +17,6 @@ dotenvy = "0.15.7"
 serde = { version = "1.0.163", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["full"] }
 url = "2.3.1"
+
+[dev-dependencies]
+tower = { version = "0.4.13", features = ["util"] }
