--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum = "0.6.18"
 chrono = "0.4.26"
 diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15.7"
+hyper = { version = "0.14.26", features = ["full"] }
 serde = { version = "1.0.163", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["full"] }
 url = "2.3.1"
