--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ dotenvy = "0.15.7"
 hyper = { version = "0.14.26", features = ["full"] }
 serde = { version = "1.0.163", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
 url = "2.3.1"
 
 [dev-dependencies]
