--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ dotenvy = "0.15.7"
 hyper = { version = "0.14.26", features = ["full"] }
 serde = { version = "1.0.163", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["tracing", "trace"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 url = "2.3.1"
 
 [dev-dependencies]
